[metadata]
name = backports.entry_points_selectable
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Compatibility shim providing selectable entry points for older implementations
long_description = file:README.rst
url = https://github.com/jaraco/backports.entry_points_selectable
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 2

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
	importlib_metadata; python_version < "3.8"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest
	pytest-checkdocs >= 2.4; python_version >= "3"
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy" and python_version >= "3"
	pytest-enabler >= 1.0.1; python_version >= "3"

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]

[bdist_wheel]
universal = 1
